rust/macros/tests/ui/fail/ambiguous_message_derive.stderr
error: duplicate payload type for Message derive: variants 'First' and 'Second' both use type `u64`
 --> tests/ui/fail/ambiguous_message_derive.rs:6:5
  |
6 |     Second(u64),
  |     ^^^^^^^^^^^
